# StereoViewer

./: Config.xml  Fragment.glsl  FragmentRay.glsl  README.md  Vertex.glsl  main.cpp
_DataFileIO/: DataLoader.cpp  DataLoader.h  ImgStack.cpp  ImgStack.h  RawFile.cpp  RawFile.h  TexArray3D.cpp  TexArray3D.h  iDataFile.h  iDataFileDeko.h
_DataFileIO/ImagePreprocessing/: HistogramGenerator.cpp  HistogramGenerator.h  MedianFilter.cpp  MedianFilter.h  TabViewButtonDelegate.cpp  TabViewButtonDelegate.h  TabViewCheckboxDelegate.cpp  TabViewCheckboxDelegate.h  TabViewEditButton.cpp  TabViewEditButton.h  TabViewTextReadOnlyDelegate.cpp  TabViewTextReadOnlyDelegate.h  UnsharpMasking.cpp  UnsharpMasking.h
_Misc/: GlobalSettings.cpp  GlobalSettings.h  LogFile.cpp  LogFile.h  _Defines.h
_OpenGL/: CameraSimple.cpp  CameraSimple.h  CameraStereo.cpp  CameraStereo.h  GeoCubeBase.cpp  GeoCubeBase.h  OpenGLWidget.cpp  OpenGLWidget.h  gluLookAtReplacement.h  iCamera.h
_Volume/: Volume.cpp  Volume.h
_Volume/TransferFunction/: NodeAlpha.cpp  NodeAlpha.h  NodeColor.cpp  NodeColor.h  NodesList.cpp  NodesList.h  TransferFunctionRGBA.cpp  TransferFunctionRGBA.h  TransferFunctionViewAlpha.cpp  TransferFunctionViewAlpha.h  TransferFunctionViewColor.cpp  TransferFunctionViewColor.h  iTransferFunction.cpp  iTransferFunction.h
_Volume/VolumeData/: VolumeData.cpp  VolumeData.h
_build/: CMakeLists.txt
gui/: DataPreProcessingDialog.cpp  DataPreProcessingDialog.h  DataPreProcessingDialog.ui  EditNodeAlphaDialog.cpp  EditNodeAlphaDialog.h  EditNodeAlphaDialog.ui  EditNodeColorDialog.cpp  EditNodeColorDialog.h  EditNodeColorDialog.ui  Infomation.cpp  Infomation.h  Infomation.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  MedianFilterDialog.cpp  MedianFilterDialog.h  MedianFilterDialog.ui  MultiWidget.cpp  MultiWidget.h  MultiWidget.ui  OpenImgStackDialog.cpp  OpenImgStackDialog.h  OpenImgStackDialog.ui  OpenVgiVolFilesDialog.cpp  OpenVgiVolFilesDialog.h  OpenVgiVolFilesDialog.ui  ProcessInfo.cpp  ProcessInfo.h  ProcessInfo.ui  SaveTransferfunctionDialog.cpp  SaveTransferfunctionDialog.h  SaveTransferfunctionDialog.ui  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui  UnsharpMaskingDialog.cpp  UnsharpMaskingDialog.h  UnsharpMaskingDialog.ui  VolumeWidget.cpp  (+2 more)
